Worked on practical tasks for week11.

--- a/week11/practical.ipynb
+++ b/week11/practical.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 449,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import numpy as np \n",
+    "np.set_printoptions(linewidth=200)\n",
+    "\n",
     "import math  # Just ignore this :-)\n",
     "\n",
     "def log(x):\n",
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 450,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 451,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 452,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 454,
    "metadata": {
     "collapsed": true
    },
@@ -157,12 +160,28 @@
     "    \"\"\"\n",
     "    Returns a KxK matrix and a KxD matrix containing counts cf. above\n",
     "    \"\"\"\n",
-    "    pass"
+    "\n",
+    "    # Transitions = number of times we go from state i to state j\n",
+    "    # Emissions = probability of emitting symbol d in state k\n",
+    "\n",
+    "    # Make a table of zeros\n",
+    "    transitions = make_table(K, K)\n",
+    "    emissions = make_table(K, D)\n",
+    "\n",
+    "    # Count transitions and emissions\n",
+    "    for i in range(len(x) - 1):\n",
+    "        transitions[z[i]][z[i + 1]] += 1.\n",
+    "        emissions[z[i]][x[i]] += 1.\n",
+    "\n",
+    "    # Count the last transition and emission\n",
+    "    emissions[z[-1]][x[-1]] += 1.\n",
+    "\n",
+    "    return transitions, emissions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 455,
    "metadata": {
     "collapsed": true
    },
@@ -181,13 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 456,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Your code here ..."
+    "# Your code here ...\n",
+    "x = translate_observations_to_indices(x_long)       # x_long = 32023...\n",
+    "z = translate_path_to_indices(z_long)               # z_long = 33333...\n",
+    "\n",
+    "transitions, emissions = count_transitions_and_emissions(7, 4, x, z)"
    ]
   },
   {
@@ -199,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 457,
    "metadata": {
     "collapsed": true
    },
@@ -209,7 +232,19 @@
     "    \"\"\"\n",
     "    Returns a HMM trained on x and z cf. training-by-counting.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    \n",
+    "    trans_array = np.array(transitions)\n",
+    "    emis_array = np.array(emissions)\n",
+    "\n",
+    "    for i in range(0, K):\n",
+    "        trans_array[i, :] = trans_array[i, :] / sum(trans_array[i, :])\n",
+    "        emis_array[i, :] = emis_array[i, :] / sum(emis_array[i, :])\n",
+    "    \n",
+    "    init_probs_7_state = np.array([0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0])\n",
+    "    trans_probs_7_state = trans_array\n",
+    "    emis_probs_7_state = emis_array\n",
+    "    hmm_7_state = hmm(init_probs_7_state, trans_probs_7_state, emis_probs_7_state)\n",
+    "    return hmm_7_state\n"
    ]
   },
   {
@@ -221,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 458,
    "metadata": {
     "collapsed": true
    },
@@ -241,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 459,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 460,
    "metadata": {
     "collapsed": true
    },
@@ -294,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 461,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 462,
    "metadata": {
     "collapsed": true
    },
@@ -349,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 463,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 464,
    "metadata": {
     "collapsed": true
    },
@@ -414,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 465,
    "metadata": {
     "collapsed": true
    },
@@ -426,8 +461,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m g1 \u001b[39m=\u001b[39m read_fasta_file(\u001b[39m'\u001b[39;49m\u001b[39mgenome1.fa\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      2\u001b[0m g1[\u001b[39m'\u001b[39m\u001b[39mgenome1\u001b[39m\u001b[39m'\u001b[39m][:\u001b[39m50\u001b[39m]\n",
-      "Cell \u001b[0;32mIn [16], line 9\u001b[0m, in \u001b[0;36mread_fasta_file\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      7\u001b[0m sequences_lines \u001b[39m=\u001b[39m {}\n\u001b[1;32m      8\u001b[0m current_sequence_lines \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(filename) \u001b[39mas\u001b[39;00m fp:\n\u001b[1;32m     10\u001b[0m     \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m fp:\n\u001b[1;32m     11\u001b[0m         line \u001b[39m=\u001b[39m line\u001b[39m.\u001b[39mstrip()\n",
+      "Cell \u001b[0;32mIn [465], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m g1 \u001b[39m=\u001b[39m read_fasta_file(\u001b[39m'\u001b[39;49m\u001b[39mgenome1.fa\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m      2\u001b[0m g1[\u001b[39m'\u001b[39m\u001b[39mgenome1\u001b[39m\u001b[39m'\u001b[39m][:\u001b[39m50\u001b[39m]\n",
+      "Cell \u001b[0;32mIn [464], line 9\u001b[0m, in \u001b[0;36mread_fasta_file\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      7\u001b[0m sequences_lines \u001b[39m=\u001b[39m {}\n\u001b[1;32m      8\u001b[0m current_sequence_lines \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(filename) \u001b[39mas\u001b[39;00m fp:\n\u001b[1;32m     10\u001b[0m     \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m fp:\n\u001b[1;32m     11\u001b[0m         line \u001b[39m=\u001b[39m line\u001b[39m.\u001b[39mstrip()\n",
       "File \u001b[0;32m~/.local/lib/python3.11/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'genome1.fa'"
      ]
